progs/tests/is/faulty_complex.sy
A :: blob {
    a: int,
    b: A,
}

B :: blob {
    a: int,
    b: B,
    c: int
}

:A is :B
:B is :A

C :: blob {
    a: int,
    b: fn C -> (C, C),
}

D :: blob {
    a: int,
    b: fn D -> (D, C),
    d: int
}

:C is :D
:D is :C

:(int, D) is :(int, C)
:(int, C) is :(int, D)

:fn int, D -> int is : fn int, C -> int
:fn int, C -> int is : fn int, D -> int

:D | C is :C
:C is :D | C

// TODO(ed): One of these should fail
// :D | C is :D
// :D is :D | D

start :: fn {}

// error: Error::CompileError { .. }
// error: Error::CompileError { .. }
// error: Error::CompileError { .. }
// error: Error::CompileError { .. }
// error: Error::CompileError { .. }
